adding leaflet component and shape service

--- a/src/app/leaflet/leaflet.component.html
+++ b/src/app/leaflet/leaflet.component.html
@@ -1,4 +1,7 @@
 <div class="map"
      leaflet
      [leafletOptions]="options"
-     [leafletLayersControl]="layersControl"></div>
+     [leafletLayersControl]="layersControl"
+     [leafletDrawOptions]="drawOptions"
+
+></div>
