leaflet lasso functionallity with javascript

--- a/src/app/leaflet/leaflet.component.html
+++ b/src/app/leaflet/leaflet.component.html
@@ -1,4 +1,8 @@
+<input id="btn" type="button" value="press me" id="toggleLasso">
+
 <div class="map"
+     id="mapId"
      leaflet
      [leafletOptions]="options"
-     [leafletLayersControl]="layersControl"></div>
+     [leafletLayersControl]="layersControl">
+</div>
